<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- Main Menu -->
    <string name="menu_play_game">Start</string>
    <string name="menu_how_to_play">Instructions</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_game_over">Game Over!</string>
    <string name="menu_continue">Continue?</string>
    <string name="credit_text">Thanks for playing!</string>
    
    <!--  Settings -->
    <string name="app_name">Dread\'s Army</string>
    <string name="vibration_enabled">Vibration</string>
    <string name="vibration_enabled_summary">Phone will vibrate when guns are fired</string>
    <string name="sounds_enabled">Sounds</string>
    <string name="sounds_enabled_summary">Enables or Disables Sound effects in the Game</string>
    <string name="music_enabled">Music</string>
    <string name="music_enabled_summary">Enables or Disables Background Music in the Game</string>
    <string name="ammo_bar_visible">Ammunition Meters</string>
    <string name="ammo_bar_visible_summary">Ammunition Meters will be displayed in the game</string>
    <string name="enemy_health_bars_visible">Health Meters</string>
    <string name="enemy_health_bars_visible_summary">Health Meters be displayed in the game</string>
    <string name="menu_reset_save">Reset Game</string>
    <string name="device_orientation_enabled">Device Orientation</string>
    <string name="device_orientation_enabled_summary">Device Orientation will be used to rotate the camera</string>
    <string name="reset_save_confirm_title">Reset Game?</string>
    <string name="reset_save_confirm_text">Do you really want to reset your game? this will erase all progress</string>
    
    <string name="swipe_sensitivity">Swipe Sensitivity</string>
    <string name="swipe_sensitivity_summary">How fast the camera will rotate when dragging the swipe bar</string>
   	<string-array name="swipe_sensitivity_option_names">
        <item>Very Low</item>
        <item>Low</item>
        <item>Normal</item>
        <item>Fast</item>
        <item>Very Fast</item>
    </string-array>
    <string-array name="swipe_sensitivity_option_values">
        <item>VL</item>
        <item>L</item>
        <item>N</item>
        <item>F</item>
        <item>VF</item>
    </string-array>
    
    <!-- Weapon stats -->
    <string name="wstat_damage">Damage</string>
    <string name="wstat_firerate">Fire-rate</string>
    <string name="wstat_reloadtime">Reload time</string>
    <string name="wstat_capacity">Capacity</string>
    <string name="wstat_automatic">Automatic</string>
    <string name="menu_back">Back</string>
    
    <!-- Weapon Names -->
    <string name="weapon_name_Colt45">Colt-45</string>
    <string name="weapon_name_Shotgun">Shotgun</string>
    <string name="weapon_name_MachineGun">Machine Gun</string>
    <string name="weapon_name_Uzi">Uzi</string>
    <string name="weapon_name_Rifle">Rifle</string>
    <string name="weapon_name_Magnum">Magnum</string>
    <string name="weapon_name_Sniper">Sniper</string>
    <string name="weapon_name_CombatShotgun">Combat Shotgun</string>
    <string name="weapon_name_Laser">Laser Rifle</string>
    <string name="weapon_name_GrenadeLauncher">Grenade Launcher</string>
    <string name="weapon_name_ChainGun">Chain Gun</string>
	    
    <!-- Tutorials -->
    <string name="how_to_play_swipe_bar">
        Drag the swipe bar at the bottom of the screen to rotate the camera left and right
    </string>
    <string name="how_to_play_travel">
        When you see this icon it means you can move to a new area
        in the game, tap the centre of the screen to go there
    </string>
    <string name="how_to_play_weaponloc">
        When you find a weapon in the game, tap this icon to unlock it!
    </string>
    <string name="how_to_play_weapon_display">
        This will take you to the weapon display screen, to return to the game either press the back button at
        the bottom of the screen or the back button on your device
    </string>
    <string name="how_to_play_firing_reloading">
        Tap the bottom half of the screen to shoot weapons and tap the top half to switch between all the weapons
        you have unlocked
    </string>
    
    <!-- About screen -->
    <string name="developed_by">Developed by</string>
    <string name="developer_name">Craig Hamilton</string>
    <string name="developer_email">craig.dreadev@gmail.com</string>
    <string name="email">Email</string>
    <string name="no_email">You currently don\'t have an email activity installed</string>
    <string name="ok">Ok</string>
    
    <!-- Cutscene Text -->
    <string name="intro_briefing">
		    Dr. Dread has awoken after centuries of sleep. He has dispatched his Army with the intention of taking
		    over the entire world! You have to stop him before it is too late!
    </string>
    
</resources>
