<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="100dp"
    android:paddingRight="100dp"
    android:background="@drawable/menu_background">
    

    <Button
        android:id="@+id/continueButton"
		style="@style/menu_button_style"
        android:text="@string/menu_play_game" />

    <Button
        android:id="@+id/howToPlay"
		style="@style/menu_button_style"
        android:text="@string/menu_how_to_play" />

    <Button
        android:id="@+id/settingsButton"
		style="@style/menu_button_style"
        android:text="@string/menu_settings" />
    
    <Button
        android:id="@+id/aboutButton"
		style="@style/menu_button_style"
        android:text="@string/menu_about" />

    <Button
        android:id="@+id/quitButton"
		style="@style/menu_button_style"
        android:text="@string/menu_quit" />

</LinearLayout>
