<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="#000000">
	
	    <TextView
	        android:id="@+id/textView1"
	        style="@style/tutorial_text"
	        android:text="@string/how_to_play_swipe_bar"/>
	
	    <ImageView
	        android:id="@+id/imageView1"
	        style="@style/tutorial_image"
	        android:src="@drawable/how_to_play_swipe_bar" />
	    
	   	<TextView
	        android:id="@+id/textView2"
			style="@style/tutorial_text"
	        android:text="@string/how_to_play_travel"/>
	
	    <ImageView
	        android:id="@+id/imageView2"
	        style="@style/tutorial_image"
	        android:src="@drawable/how_to_play_travel" />
	    
	    <TextView
	        android:id="@+id/textView3"
			style="@style/tutorial_text"
	        android:text="@string/how_to_play_weaponloc"/>
	
	    <ImageView
	        android:id="@+id/imageView3"
	        style="@style/tutorial_image"
	        android:src="@drawable/how_to_play_weaponloc" />
	    
	   	<TextView
	        android:id="@+id/textView4"
			style="@style/tutorial_text"
	        android:text="@string/how_to_play_weapon_display"/>
	
	
	    <TextView
	        android:id="@+id/textView5"
			style="@style/tutorial_text"
	        android:text="@string/how_to_play_firing_reloading"/>
	
	    <ImageView
	        android:id="@+id/imageView5"
	        style="@style/tutorial_image"
	        android:src="@drawable/how_to_play_firing_reloading" />


	
	</LinearLayout>
</ScrollView>
