<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/weapon_display_background">

    <TextView
        android:id="@+id/weaponName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/weapon_name"
        android:padding="5dp"
        android:text=""
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/weapon_display_name_text" />

 	<TableLayout
 	    android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:shrinkColumns="1">
 	    
	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1">
	
	        <ImageView
	            android:id="@+id/weaponImage"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_margin="1dp"
	            android:layout_weight="1"
	            android:adjustViewBounds="true"
	            android:padding="5dp"
	            android:src="@drawable/splash_screen"
	            android:background="@drawable/weapon_background"/>
	
	        <TableLayout
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent">
	
	            <TableRow
	                android:id="@+id/DamageRow"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >
	
	                <TextView
	                    android:id="@+id/DamageLabel"
	                    style="@style/weapon_stat_label"
	                    android:text="@string/wstat_damage" />
	
	                <TextView
	                    android:id="@+id/Damage"
	                    style="@style/weapon_stat_value"
	                    android:text="" />
	            </TableRow>
	
	            <TableRow
	                android:id="@+id/FireRateRow"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >
	
	                <TextView
	                    android:id="@+id/FireRateLabel"
	                    style="@style/weapon_stat_label"
	                    android:text="@string/wstat_firerate" />
	
	                <TextView
	                    android:id="@+id/FireRate"
	                    style="@style/weapon_stat_value"
	                    android:text="" />
	            </TableRow>
	
	            <TableRow
	                android:id="@+id/ReloadSpeedRow"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >
	
	                <TextView
	                    android:id="@+id/ReloadSpeedLabel"
	                    style="@style/weapon_stat_label"
	                    android:text="@string/wstat_reloadtime" />
	
	                <TextView
	                    android:id="@+id/ReloadSpeed"
	                    style="@style/weapon_stat_value"
	                    android:text="" />
	            </TableRow>
	
	            <TableRow
	                android:id="@+id/CapacityRow"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >
	
	                <TextView
	                    android:id="@+id/CapacityLabel"
	                    style="@style/weapon_stat_label"
	                    android:text="@string/wstat_capacity" />
	
	                <TextView
	                    android:id="@+id/Capacity"
	                    style="@style/weapon_stat_value"
	                    android:text="" />
	            </TableRow>
	
	            <TableRow
	                android:id="@+id/AutomaticRow"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >
	
	                <TextView
	                    android:id="@+id/AutomaticLabel"
	                    style="@style/weapon_stat_label"
	                    android:text="@string/wstat_automatic" />
	
	                <TextView
	                    android:id="@+id/Automatic"
	                    style="@style/weapon_stat_value"
	                    android:text="" />
	            </TableRow>
	            <TableRow
	                android:id="@+id/AmmoImageRow"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="1"
	                android:gravity="center_vertical"
	                android:background="@drawable/weapon_background">
			
			        <ImageView
			            android:id="@+id/ammoImage"
			            android:layout_width="30dp"
			            android:layout_height="30dp"
			            android:layout_margin="1dp"
			            android:adjustViewBounds="true"
			            android:padding="5dp"
			            android:src="@drawable/splash_screen"
			            android:layout_span="2"/>
	            </TableRow>
	        </TableLayout>
	    </TableRow>
    </TableLayout>

    
	<Button
        android:id="@+id/backButton"
        android:text="@string/menu_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" 
        android:background="@drawable/menu_button"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        />

</TableLayout>

